# HAPP

./: .gitignore  .gitmodules  .vercelignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  FORMAL_VERIFIATION.md  README.md  index.html  styles.css
codex_specs/: AGENDA.md  CAPABILITIES.md  CLAIMSET.md  EXECUTIVE.md  HAPP_injection.md  PITCH.md  SEQUENCE.md  USE_CASES.md  wg.md
docs/: agents-md-snippet.md  enterprise-entra-adapter.md  enterprise-entra-claims-challenge-adapter.md  one-pager-aaif-steering.md
formal/: HappProof.lean  Main.lean  README.md  lake-manifest.json  lakefile.toml
formal/HappProof/: E2E.lean  Proofs.lean  Protocol.lean
implementations/: README_rust.md
implementations/python/: requirements.txt
implementations/python/examples/: demo_mcp_flow.py
implementations/python/happ/: identity.py  rp_verifier.py  session_store.py  util.py
implementations/python/happ/adapters/: entra_mock.py  entra_oidc_pkce.py
implementations/python/happ/core/: intent.py
implementations/python/happ/crypto/: jws.py
implementations/python/happ/mcp/: stdio_server.py
implementations/python/happ/provider/: http_server.py  issuer.py
implementations/python/happ/web/: consent_ui.py
implementations/rust/: Cargo.toml  LICENSE  README.md
implementations/rust/crates/happ-conformance/: Cargo.toml
implementations/rust/crates/happ-conformance/src/: main.rs
implementations/rust/crates/happ-core/: Cargo.toml
implementations/rust/crates/happ-core/src/: error.rs  hash.rs  jcs.rs  level.rs  lib.rs  signing_view.rs  types.rs
implementations/rust/crates/happ-crypto/: Cargo.toml
implementations/rust/crates/happ-crypto/src/: jwt.rs  lib.rs  util.rs
implementations/rust/crates/happ-provider/: Cargo.toml
implementations/rust/crates/happ-provider/src/: lib.rs  provider.rs
implementations/rust/crates/happ-provider/src/adapters/: entra_mock.rs  entra_oidc_pkce.rs  mod.rs
implementations/rust/crates/happ-provider/src/mcp/: mod.rs  stdio.rs
implementations/rust/crates/happ-provider/src/web/: mod.rs  server.rs
implementations/rust/crates/happ-rp/: Cargo.toml
implementations/rust/crates/happ-rp/src/: lib.rs  policy.rs  replay.rs  verifier.rs
implementations/rust/crates/happd/: Cargo.toml
implementations/rust/crates/happd/src/: main.rs
implementations/rust/examples/keys/: README.md  provider_rsa_private.pem  provider_rsa_public.pem
implementations/rust/test_vectors/v0.3/: action_intent.sample.json  expected_intent_hash.txt  expected_presentation_hash.txt
interop/: run_conformance.py
interop/tests/: conftest.py  test_REQ_ENTRA_RP_02_evidence.py  test_REQ_PP_IDB_02_identity_required.py  test_REQ_RP_CORE_hash_bindings.py  test_python_ref_hardening.py
schemas/: action-intent.v0.3.schema.json  happ-challenge.v0.3.schema.json  happ-consent-credential.v0.3.schema.json  provider-certification-credential.v0.1.schema.json  provider-certification-credential.v0.3.schema.json
sdks/: README.md
sdks/python/: README.md  pyproject.toml
sdks/python/src/happ_sdk/: __init__.py  hash.py  types.py  verifier.py
sdks/python/tests/: conftest.py  test_hash.py  test_verifier.py
sdks/rust/: Cargo.toml  README.md
sdks/rust/src/: hash.rs  lib.rs  types.rs  verify.rs
sdks/typescript/: README.md  package-lock.json  package.json  tsconfig.json
sdks/typescript/src/: hash.test.ts  hash.ts  index.ts  types.ts  verify.test.ts  verify.ts
specification/draft/: conformance-v0.3.md  happ-rfc-style-v0.3.4.md  happ-v0.3.4.md  mcp-profile-v0.3.4.md  pohp-assurance-levels-v0.2.md  pohp-assurance-levels-v0.3.md
specification/draft/adapters/: entra-claims-challenge-v0.1.md  entra-oidc-v0.1.md
specification/draft/ai-intent-profiles/: ai-ui-confirm-v1.md
test_vectors/v0.3/: README.md  action-intent.payment.transfer.sample.json  expected_intent_hash.txt  expected_presentation_hash.txt  happ-challenge.sample.json  signing-view.payment.transfer.sample.json
