[package]
name = "happ-sdk"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "Rust SDK for HAPP hashing and claim verification"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
base64 = "0.22"
thiserror = "1"

[dev-dependencies]
serde_json = "1"
