[package]
name = "happ-conformance"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
happ-core = { path = "../happ-core" }
happ-crypto = { path = "../happ-crypto" }
happ-rp = { path = "../happ-rp" }

serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
chrono = { version = "0.4", features = ["serde", "clock"] }
