[package]
name = "happ-crypto"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
jsonwebtoken = "9"
base64 = "0.22"
sha2 = "0.10"
rand = "0.8"
uuid = { version = "1", features = ["v4"] }
