[package]
name = "happ-provider"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
happ-core = { path = "../happ-core" }
happ-crypto = { path = "../happ-crypto" }

serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"

tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal"] }
axum = "0.7"
tower-http = { version = "0.6", features = ["cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde", "clock"] }

dashmap = "6"
clap = { version = "4", features = ["derive"] }

rand = "0.8"
url = "2"

# Entra OIDC adapter skeleton dependencies
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
openidconnect = { version = "3", default-features = false, features = ["reqwest", "rustls-tls"] }

async-trait = "0.1"

anyhow = "1"
