[package]
name = "happ-rp"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
happ-core = { path = "../happ-core" }
happ-crypto = { path = "../happ-crypto" }

serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
chrono = { version = "0.4", features = ["serde", "clock"] }
dashmap = "6"
jsonwebtoken = "9"
