[package]
name = "happd"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
happ-core = { path = "../happ-core" }
happ-crypto = { path = "../happ-crypto" }
happ-provider = { path = "../happ-provider" }

tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
